<resources>
    <string name="app_name">Valeriana</string>

    <!--    Initial page   -->
    <string name="phrase">El médico debe ser el auxiliar de la naturaleza, no su enemigo</string>
    <string name="SignUpButton">Sign Up</string>
    <string name="LoginButton">Login</string>
    <string name="LogoutButton">Logout</string>

    <!--    Login   -->
    <string name="password">Contraseña</string>
    <string name="email">Correo electronico</string>

    <string name="forgotPButton">¿Has olvidado la contraseña?</string>
    <string name="loginWhit">Iniciar sesion con</string>

    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="whatsApp">WhatsApp</string>

    <!--   Bottom Bar   -->
    <string name="home">Inicio</string>
    <string name="search">Buscar</string>
    <string name="calendar">Calendario</string>
    <string name="prescription">Recetas</string>
    <string name="profile">Perfil</string>
    <string name="highlights">Destacados</string>


    <!--    Search fragment-->
    <string name="popularity">Popularidad</string>
    <string name="patients">Pacientes</string>

    <string name="location">CDMX, Alvaro Obregón</string>
</resources>