<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="507dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/app_name"
            android:textSize="60sp" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="25dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:fontFamily="@font/nunito_light"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="25dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:fontFamily="@font/nunito_light"
            android:autofillHints="" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="25dp"
            android:text="@string/forgotPButton"
            android:textAlignment="viewEnd"
            android:fontFamily="@font/nunito_semibold"/>

        <Button
            android:id="@+id/login_button"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="70dp"
            android:background="@drawable/round_style"
            android:backgroundTint="@color/blue"
            android:fontFamily="@font/nunito_semibold"
            android:text="@string/LoginButton"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_gravity="bottom">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loginWhit"
            android:textAlignment="center"
            android:fontFamily="@font/nunito_semibold"/>
    </LinearLayout>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="225dp"
        android:layout_gravity="center"
        android:orientation="horizontal"
        app:layout_anchor="@+id/linearLayout"
        app:layout_anchorGravity="center">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="@string/facebook"
            android:src="@drawable/facebook" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="@string/google"
            android:src="@drawable/google" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="@string/whatsApp"
            android:src="@drawable/whats_app" />


    </GridLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>