<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/app_name"
            android:textSize="60sp" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="@string/app_name"
            android:src="@drawable/pic01" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:fontFamily="@font/nunito_semibold"
            android:text="@string/phrase"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="30sp" />

    </LinearLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="bottom"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:columnCount="3">

        <Button
            android:id="@+id/go_to_signup_button"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="@string/SignUpButton"/>

        <Button
            android:id="@+id/go_to_login_button"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_row="0"
            android:layout_column="2"
            android:text="@string/LoginButton"
            android:background="@drawable/round_style"/>

    </GridLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>